# DiningPhilosophers

./: .travis.yml  CMakeLists.txt  CMakeSettings.json  DiningPhilosophers.sln  README.md  bitbucket-pipelines.yml  circle.yml
.circleci/: config.yml
.github/workflows/: c-cpp.yml  release.yml
DiningPhilosophers/: CMakeLists.txt  DiningPhilosophers.vcxproj  DiningPhilosophers.vcxproj.filters  Fork.cpp  Fork.h  Philosopher.cpp  Philosopher.h  PhilosopherNames.txt  PhilosopherThread.cpp  PhilosopherThread.h  Source.cpp
DiningPhilosophers/Headers/: Philosopher.h  PhilosopherThread.h
DiningPhilosophers/Source/: Fork.cpp  Philosopher.cpp  PhilosopherThread.cpp
